# accenturegenaimavericks_groupA

./: .gitignore  README.md  README_esp.md  main.py  parse_sentence.py  pyproject.toml  requirements.txt  simplify_judgment.py  simplify_judgment_original.py  streamlit_app.py
app/: streamlit_app.py
outputs/SJPI_1056_2023/: README.md  resultado.json
outputs/SJPI_281_2025/: README.md  resultado.json
outputs/SJPI_638_2019/: README.md  resultado.json
outputs/tmp2tqfj2g_/: README.md  resultado.json
outputs/tmpli8y7f40/: README.md  resultado.json
outputs/tmpoay8lmyz/: README.md  resultado.json
src/: config.py  pipeline.py  simplify_judgment.py
