[project]
name = "accenturegenaimavericks-groupa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "google-generativeai>=0.3.2",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=0.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "pypdf>=6.2.0",
    "sentence-transformers>=5.1.2",
]
